# simple-raytracing-2d

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  run.sh
src/: main.cpp
